--- a/packages/styles/_sass/reusable-components/_design-system-forms.scss
+++ b/packages/styles/_sass/reusable-components/_design-system-forms.scss
@@ -34,6 +34,7 @@ label,
 button,
 input,
 select {
+  color: currentColor;
   vertical-align: middle;
 }
 
